--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.FarrelApp"
         tools:targetApi="31">
         <activity
+            android:name=".CalculatorActivity"
+            android:exported="false" />
+
+        <activity
             android:name=".FarrelActivity"
             android:exported="true">
             <intent-filter>
